--- a/apropos_AMQ.html
+++ b/apropos_AMQ.html
@@ -84,7 +84,7 @@
 
 
 
-    <div class="page-standard" id="APropos-p1">
+    <div class="page-standard" id="page-apropos">
 	<h1>À propos de l'AMQ</h1>
         <div class="col-md-12 col-s-12">
         <p id="txtAPropos">
