--- a/commanditaires.html
+++ b/commanditaires.html
@@ -91,12 +91,41 @@
 
 
     <!--ACCUEIL & TEXTE DE BIENVENUE-->
-    <div class="page-standard">
+    <div class="page-standard" id="page-commanditaires">
         <h1 id="commanditaires">Nos commanditaires</h1>
-        <img class="comman_img" src="https://www.threetwelvecreative.com/hs-fs/hubfs/texasinstruments-06.jpg?width=2668&height=1500&name=texasinstruments-06.jpg" />
-        <img class="comman_img" src="https://www.threetwelvecreative.com/hs-fs/hubfs/texasinstruments-06.jpg?width=2668&height=1500&name=texasinstruments-06.jpg" />
-        <img class="comman_img" src="https://www.threetwelvecreative.com/hs-fs/hubfs/texasinstruments-06.jpg?width=2668&height=1500&name=texasinstruments-06.jpg" />
-
+			<div class="col-md-12 col-s-12">
+			<p id="txtCommanditaires">
+				
+				<table>
+					<tr>
+						<th style="width:33%;"></th>
+						<th style="width:33%;"></th>
+						<th style="width:34%;"></th>
+					</tr>
+					<tr>
+						<td>
+							<a href="http://sciences.uqam.ca/fr/"><img class="img" id="imgSciencesUqam" src="assets/commanditaires/UQAM_faculte_sciences.jpg" /></a>
+						</td>
+						<td>
+							<a href="http://www.stat.gouv.qc.ca/"><img class="img" id="imgISQ" src="assets/commanditaires/isq.png" /></a>
+						</td>
+						<td>
+							<a href="https://www.acfas.ca/"><img class="img" id="imgACFAS" src="assets/commanditaires/acfas.png" /></a>
+						</td>
+					</tr>
+					<tr>	
+						<td>
+							<a href="https://fcvm.ca"><img class="img" id="imgFondation" src="assets/commanditaires/fondation.png" /></a>
+						</td>
+						<td>
+							<a href="http://ism.uqam.ca/"><img class="img" id="imgISM" src="assets/commanditaires/ISM.png" /></a>
+						</td>
+					</tr>
+				
+			
+				</table>
+			</p>
+			</div>
     </div>
 
 
