--- a/index.html
+++ b/index.html
@@ -1,25 +1,19 @@
 ﻿<!DOCTYPE html>
-
 <html lang="en" xmlns="http://www.w3.org/1999/xhtml">
 <head>
     <meta charset="utf-8" />
     <title>Accueil | Congrès AMQ 2019</title>
     <!--favicon-->
     <link rel="shortcut icon" href="assets/favicon.ico" type="image/x-icon">
-   
-    <!-- Latest compiled and minified CSS -->
+    <!--CSS importants-->
+    <link rel="stylesheet" href="styles/Pages/HomePage.css" />
     <link rel="stylesheet" href="css/bootstrap.css" />
-
+    <link rel="stylesheet" href="styles/main.css" />
     <!--Couleur du theme aux versions mobiles-->
     <meta name="theme-color" content="#EB5642" />
 
-    <!--CSS General du site-->
-    <link rel="stylesheet" href="styles/main.css" />
-    <!--CSS de la page actuelle-->
-    <link rel="stylesheet" href="styles/Pages/HomePage.css" />
-
-    <script>document.write('<script src="http://' + (location.host || 'localhost').split(':')[0] + ':35729/livereload.js?snipver=1"></' + 'script>')</script>
 </head>
+
 <body>
     <header>
         <div>
@@ -38,7 +32,6 @@
             </div>
         </div>
     </header>
-    <!--BARRE DE NAVIGATION-->
     <nav class="navbar navbar-default navbar-fixed-top">
         <div class="container-fluid">
             <!-- Brand and toggle get grouped for better mobile display -->
@@ -104,14 +97,11 @@
     </nav>
 
 
-    <!--ACCUEIL & TEXTE DE BIENVENUE-->
-    <div class="row page-standard">
-        <div id="titre-p1">
-            <h1>Accueil</h1>
-        </div>
 
+    <div class="page-standard row">
+        <h1>Accueil</h1>
+        <div class="col-md-12 col-s-12 ">
 
-        <div class="col-md-12 col-s-12 " id="texte-p1">
             <p>
                 <img align="right" id="poster" src="assets/poster_hp.jpg" />
                 Aux maths citoyen.ne.s !
@@ -133,36 +123,10 @@
                 Cette année encore, nous bâtirons sur les excellentes fondations des congrès précédents et, comme il se doit, nous apporterons quelques innovations. Dans un esprit actuel et fidèle à l’image de notre cégep et de la population étudiante mondiale, nous viserons l’organisation d’un colloque écoresponsable s’appuyant entre autres sur des produits locaux ainsi que sur l’économie sociale.. Nous faisons donc le choix de limiter drastiquement les quantités de papier et de matériel remis aux participantes et participants. Nous vous demanderons donc d’apporter votre outil numérique favori !
                 <br /> <br />
 
+
             </p>
         </div>
     </div>
-
-
-
-    <!--<div class="page-standard">
-        <div id="p2">
-        <div class="col-md-4 col-s-12" id="invites">
-                <p class="top-label">Les invités</p>
-                <p class="centered">Michael rond</p>
-                <img src="assets/atiyah.jpg" id="rond" />
-                <a href="invites.html">
-                    <p class="bottom-label">Michael Atiyah</p>
-                </a>
-        </div>
-        <div class="col-md-4 col-s-12" id="horaires">
-            <p class="top-label">Horaire</p>
-            <p class="centered">Michael rond</p>
-            <img src="assets/horaires.png" id="rond" />
-            <p class="bottom-label">Voir la programmation complète</p>
-        </div>
-        <div class="col-md-4 col-s-12" id="nous-joindre">
-            <p class="centered">Michael rond</p>
-            <p class="top-label">Nous joindre</p>
-            <iframe class="rond" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2795.7756214546134!2d-73.56855844883194!3d45.51459527899897!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4cc91a4b508adcab%3A0x9439f187f763ea27!2sC%C3%A9gep+du+Vieux+Montr%C3%A9al!5e0!3m2!1sen!2sca!4v1548698012269" width="200" height="200" frameborder="0" style="border:0" allowfullscreen></iframe>
-            <p class="bottom-label">Voir l'itinéraire</p>
-        </div></div>
-    </div>-->
-
 
     <footer class="page-footer">
         <div class="footer">
@@ -246,13 +210,11 @@
 
 
 
-
-
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
     <!-- Latest compiled and minified JavaScript -->
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
 
-    <script src="scripts/script1.js"></script>
+
 </body>
 </html>
