--- a/Artiste.html
+++ b/Artiste.html
@@ -1,27 +1,21 @@
 ﻿<!DOCTYPE html>
-
 <html lang="en" xmlns="http://www.w3.org/1999/xhtml">
 <head>
     <meta charset="utf-8" />
     <title>Accueil | Congrès AMQ 2019</title>
     <!--favicon-->
     <link rel="shortcut icon" href="assets/favicon.ico" type="image/x-icon">
-
-    <!-- Latest compiled and minified CSS -->
+    <!--CSS importants-->
+    <link rel="stylesheet" href="styles/Pages/Artiste.css" />
     <link rel="stylesheet" href="css/bootstrap.css" />
-
+    <link rel="stylesheet" href="styles/main.css" />
     <!--Couleur du theme aux versions mobiles-->
     <meta name="theme-color" content="#EB5642" />
 
-    <!--CSS General du site-->
-    <link rel="stylesheet" href="styles/main.css" />
-    <!--CSS de la page actuelle-->
-    <link rel="stylesheet" href="styles/Pages/Artiste.css" />
-
-    <script>document.write('<script src="http://' + (location.host || 'localhost').split(':')[0] + ':35729/livereload.js?snipver=1"></' + 'script>')</script>
 </head>
+
 <body>
-    <!--BARRE DE NAVIGATION-->
+
     <nav class="navbar navbar-default navbar-fixed-top">
         <div class="container-fluid">
             <!-- Brand and toggle get grouped for better mobile display -->
@@ -52,9 +46,9 @@
                     </li>
                     <li class="dropdown">
                         <a href="#" class="dropdown-toggle white" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">PROGRAMME<span class="caret"></span></a>
-                        <ul class="dropdown-menu">
+                        <ul class="dropdown-menu white">
                             <li><a href="conference_pleniere.html">CONFÉRENCE PLÉNIÈRE</a></li>
-                            <li><a href="Artiste.html">ARTISTE INVITÉ</a></li>
+                            <li white><a href="Artiste.html">ARTISTE INVITÉ</a></li>
                             <li><a href="horaire.html">HORAIRE GÉNÉRAL</a></li>
                             <li><a href="proposerUnAtelier.html">PROPOSER UN ATELIER</a></li>
                         </ul>
@@ -86,7 +80,8 @@
         </div><!-- /.container-fluid -->
     </nav>
 
-    <!--ACCUEIL & TEXTE DE BIENVENUE-->
+
+
     <div class="page-standard row" id="Artistes-p1">
         <h1>Étienne Saint-Amant</h1>
         <div class="col-md-12 col-s-12">
@@ -202,27 +197,11 @@
 
 
 
-    <!--= function () {
-    alert("button was clicked");-->
-    <script>
-        var list_no = 0;
-        function myFunction(parameter) {
-            list_no = list_no + parameter;
-            if (list_no == -1) {
-                return [document.getElementById("nomArtiste").innerHTML = "Michael Atiyah", document.getElementById("imgArtiste").src = "assets/atiyah.jpg"];
-
-
-            }
-            else if (list_no != -1) {
-                return [document.getElementById("nomArtiste").innerHTML = "Terence Tao", document.getElementById("imgArtiste").src = "assets/tao.jpg"];;
-            }
-        }
-
-    </script>
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
     <!-- Latest compiled and minified JavaScript -->
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
-    <script src="scripts/script1.js"></script>
+
+
 </body>
 </html>
