--- a/commentSePreparer.html
+++ b/commentSePreparer.html
@@ -2,20 +2,18 @@
 <html lang="en" xmlns="http://www.w3.org/1999/xhtml">
 <head>
     <meta charset="utf-8" />
-    <title>Écoresponsabilité | Congrès AMQ 2019</title>
+    <title>Accueil | Congrès AMQ 2019</title>
     <!--favicon-->
     <link rel="shortcut icon" href="assets/favicon.ico" type="image/x-icon">
-    <!-- Latest compiled and minified CSS -->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-    <!--CSS general du site (peut etre enlever ceci)-->
-    <!--<link rel="stylesheet" href="styles/main.css" type="text/css" />-->
-    <!--CSS General du site-->
+    <!--CSS importants-->
+    <link rel="stylesheet" href="styles/Pages/Comment_se_preparer.css" />
+    <link rel="stylesheet" href="css/bootstrap.css" />
     <link rel="stylesheet" href="styles/main.css" />
-    <!--CSS de la page actuelle-->
-    <link rel="stylesheet" href="styles/Pages/Ecoresponsabilite.css" />
+    <!--Couleur du theme aux versions mobiles-->
+    <meta name="theme-color" content="#EB5642" />
 
-    <script>document.write('<script src="http://' + (location.host || 'localhost').split(':')[0] + ':35729/livereload.js?snipver=1"></' + 'script>')</script>
 </head>
+
 <body>
 
     <nav class="navbar navbar-default navbar-fixed-top">
@@ -48,9 +46,9 @@
                     </li>
                     <li class="dropdown">
                         <a href="#" class="dropdown-toggle white" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">PROGRAMME<span class="caret"></span></a>
-                        <ul class="dropdown-menu">
+                        <ul class="dropdown-menu white">
                             <li><a href="conference_pleniere.html">CONFÉRENCE PLÉNIÈRE</a></li>
-                            <li><a href="Artiste.html">ARTISTE INVITÉ</a></li>
+                            <li white><a href="Artiste.html">ARTISTE INVITÉ</a></li>
                             <li><a href="horaire.html">HORAIRE GÉNÉRAL</a></li>
                             <li><a href="proposerUnAtelier.html">PROPOSER UN ATELIER</a></li>
                         </ul>
@@ -81,6 +79,9 @@
             </div><!-- /.navbar-collapse -->
         </div><!-- /.container-fluid -->
     </nav>
+
+
+
     <div class="page-standard row" id="Eco-p1">
         <h1>Comment se préparer à l'événement</h1>
         <div class="col-md-12 col-s-12">
@@ -118,14 +119,6 @@
 
         </div>
     </div>
-
-    </div>
-
-
-
-
-
-
 
 
 
@@ -215,5 +208,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
     <!-- Latest compiled and minified JavaScript -->
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
-    <script src="scripts/script1.js"></script>
+
+
 </body>
+</html>
