--- a/horaire.html
+++ b/horaire.html
@@ -5,22 +5,16 @@
     <title>Accueil | Congrès AMQ 2019</title>
     <!--favicon-->
     <link rel="shortcut icon" href="assets/favicon.ico" type="image/x-icon">
-
-    <!-- Latest compiled and minified CSS -->
+    <!--CSS importants-->
+    <link rel="stylesheet" href="styles/Pages/Horaire.css" />
     <link rel="stylesheet" href="css/bootstrap.css" />
-
+    <link rel="stylesheet" href="styles/main.css" />
     <!--Couleur du theme aux versions mobiles-->
     <meta name="theme-color" content="#EB5642" />
 
-    <!--CSS General du site-->
-    <link rel="stylesheet" href="styles/main.css" />
-    <!--CSS de la page actuelle-->
-    <link rel="stylesheet" href="styles/Pages/Horaire.css" />
-
-    <script>document.write('<script src="http://' + (location.host || 'localhost').split(':')[0] + ':35729/livereload.js?snipver=1"></' + 'script>')</script>
 </head>
+
 <body>
-    <!--BARRE DE NAVIGATION-->
     <nav class="navbar navbar-default navbar-fixed-top">
         <div class="container-fluid">
             <!-- Brand and toggle get grouped for better mobile display -->
@@ -51,9 +45,9 @@
                     </li>
                     <li class="dropdown">
                         <a href="#" class="dropdown-toggle white" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">PROGRAMME<span class="caret"></span></a>
-                        <ul class="dropdown-menu">
+                        <ul class="dropdown-menu white">
                             <li><a href="conference_pleniere.html">CONFÉRENCE PLÉNIÈRE</a></li>
-                            <li><a href="Artiste.html">ARTISTE INVITÉ</a></li>
+                            <li white><a href="Artiste.html">ARTISTE INVITÉ</a></li>
                             <li><a href="horaire.html">HORAIRE GÉNÉRAL</a></li>
                             <li><a href="proposerUnAtelier.html">PROPOSER UN ATELIER</a></li>
                         </ul>
@@ -85,8 +79,9 @@
         </div><!-- /.container-fluid -->
     </nav>
 
-    <!--ACCUEIL & TEXTE DE BIENVENUE-->
-    <div class="page-horaire">
+
+
+    <div class="page-standard row">
         <div class="col-md-12 col-s-12">
 
             <h1> Horaire général</h1>
@@ -289,7 +284,7 @@
             <br />
             <br />
             <br />
-            <a href="#">
+            <a href="javascript:window.print()" alt="Imprimer Horaire" id="print-button">
                 <h3 id="telechargement">Télécharger l'horaire</h3>
             </a>
 
@@ -378,16 +373,12 @@
 
 
 
-    <script>
-        function myFunction() {
-            return [document.getElementById("horaireGen").src = "assets/horaire_perso.jpg"];
-        }
-
-    </script>
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
     <!-- Latest compiled and minified JavaScript -->
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
-    <script src="scripts/script1.js"></script>
+
+
 </body>
 </html>
+
