--- a/itineraire.html
+++ b/itineraire.html
@@ -5,21 +5,17 @@
     <title>Accueil | Congrès AMQ 2019</title>
     <!--favicon-->
     <link rel="shortcut icon" href="assets/favicon.ico" type="image/x-icon">
-
-    <!-- Latest compiled and minified CSS -->
+    <!--CSS importants-->
+    <link rel="stylesheet" href="styles/Pages/Itineraire.css" />
     <link rel="stylesheet" href="css/bootstrap.css" />
-
+    <link rel="stylesheet" href="styles/main.css" />
     <!--Couleur du theme aux versions mobiles-->
     <meta name="theme-color" content="#EB5642" />
 
-    <!--CSS General du site-->
-    <link rel="stylesheet" href="styles/main.css" />
-    <!--CSS de la page actuelle-->
-    <link rel="stylesheet" href="styles/Pages/Itineraire.css" />
-
-    <script>document.write('<script src="http://' + (location.host || 'localhost').split(':')[0] + ':35729/livereload.js?snipver=1"></' + 'script>')</script>
 </head>
+
 <body>
+
     <nav class="navbar navbar-default navbar-fixed-top">
         <div class="container-fluid">
             <!-- Brand and toggle get grouped for better mobile display -->
@@ -50,9 +46,9 @@
                     </li>
                     <li class="dropdown">
                         <a href="#" class="dropdown-toggle white" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">PROGRAMME<span class="caret"></span></a>
-                        <ul class="dropdown-menu">
+                        <ul class="dropdown-menu white">
                             <li><a href="conference_pleniere.html">CONFÉRENCE PLÉNIÈRE</a></li>
-                            <li><a href="Artiste.html">ARTISTE INVITÉ</a></li>
+                            <li white><a href="Artiste.html">ARTISTE INVITÉ</a></li>
                             <li><a href="horaire.html">HORAIRE GÉNÉRAL</a></li>
                             <li><a href="proposerUnAtelier.html">PROPOSER UN ATELIER</a></li>
                         </ul>
@@ -83,8 +79,6 @@
             </div><!-- /.navbar-collapse -->
         </div><!-- /.container-fluid -->
     </nav>
-
-
     <div class="page-standard row" id="Itineraire-p1">
         <h1>Comment se rendre</h1>
         <h3 id="ancrageVelo">En vélo</h3>
@@ -131,7 +125,7 @@
         <br />
         <h3>En voiture</h3>
         <div class="col-md-4 col-s-12" id="nous-joindre">
-            
+
             <p class="txtItineraire">
                 <iframe class="rond" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2795.7756214546134!2d-73.56855844883194!3d45.51459527899897!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4cc91a4b508adcab%3A0x9439f187f763ea27!2sC%C3%A9gep+du+Vieux+Montr%C3%A9al!5e0!3m2!1sen!2sca!4v1548698012269" width="1000" height="400" frameborder="0" style="border:0" allowfullscreen></iframe>
             </p>
@@ -144,19 +138,6 @@
 
 
     </div>
-
-
-
-
-
-
-
-    </div>
-
-
-
-
-
 
 
 
@@ -246,5 +227,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
     <!-- Latest compiled and minified JavaScript -->
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
-    <script src="scripts/script1.js"></script>
+
+
 </body>
+</html>
