--- a/stationnement.html
+++ b/stationnement.html
@@ -5,20 +5,15 @@
     <title>Accueil | Congrès AMQ 2019</title>
     <!--favicon-->
     <link rel="shortcut icon" href="assets/favicon.ico" type="image/x-icon">
-
-    <!-- Latest compiled and minified CSS -->
+    <!--CSS importants-->
+    <link rel="stylesheet" href="styles/Pages/Stationnement.css" />
     <link rel="stylesheet" href="css/bootstrap.css" />
-
+    <link rel="stylesheet" href="styles/main.css" />
     <!--Couleur du theme aux versions mobiles-->
     <meta name="theme-color" content="#EB5642" />
 
-    <!--CSS General du site-->
-    <link rel="stylesheet" href="styles/main.css" />
-    <!--CSS de la page actuelle-->
-    <link rel="stylesheet" href="styles/Pages/Stationnement.css" />
-
-    <script>document.write('<script src="http://' + (location.host || 'localhost').split(':')[0] + ':35729/livereload.js?snipver=1"></' + 'script>')</script>
 </head>
+
 <body>
     <nav class="navbar navbar-default navbar-fixed-top">
         <div class="container-fluid">
@@ -50,9 +45,9 @@
                     </li>
                     <li class="dropdown">
                         <a href="#" class="dropdown-toggle white" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">PROGRAMME<span class="caret"></span></a>
-                        <ul class="dropdown-menu">
+                        <ul class="dropdown-menu white">
                             <li><a href="conference_pleniere.html">CONFÉRENCE PLÉNIÈRE</a></li>
-                            <li><a href="Artiste.html">ARTISTE INVITÉ</a></li>
+                            <li white><a href="Artiste.html">ARTISTE INVITÉ</a></li>
                             <li><a href="horaire.html">HORAIRE GÉNÉRAL</a></li>
                             <li><a href="proposerUnAtelier.html">PROPOSER UN ATELIER</a></li>
                         </ul>
@@ -86,7 +81,7 @@
 
 
 
-    <div class="page-standard row" >
+    <div class="page-standard row">
         <h1>Stationnement</h1>
         <div class="col-md-12 col-s-12">
             <p class="txtStationnement">
@@ -104,7 +99,7 @@
                 Vous la trouverez juste à côté de la sortie du stationnement.
                 Si vous souhaitez utilisez l’aire de stationnement sécurisée, veuillez <a href="nous_contacter.html">contacter</a> le comité organisateur.
                 <br /><br />
-                <img id="imgStationnement2" src="assets/stationnementVelos1.png" />
+                <img id="imgStationnement2" src="assets/stationnementVelos1.PNG" />
                 <br />
                 <br />
                 <br />
@@ -121,7 +116,6 @@
         </div>
 
     </div>
-
 
 
     <footer class="page-footer">
@@ -205,9 +199,13 @@
     </footer>
 
 
+
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
     <!-- Latest compiled and minified JavaScript -->
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
-    <script src="scripts/script1.js"></script>
+
+
 </body>
+</html>
+
