--- a/conference_pleniere.html
+++ b/conference_pleniere.html
@@ -40,8 +40,6 @@
                             <li><a href="nous_contacter.html">NOUS CONTACTER</a></li>
                             <li><a href="Comite.html">COMITÉ ORGANISATEUR</a></li>
                             <li role="separator" class="divider"></li>
-                            <li><a href="Apropos_AMQ.html">À PROPOS DE L'AMQ </a></li>
-                            <li role="separator" class="divider"></li>
                             <li><a href="commanditaires.html">COMMANDITAIRES</a></li>
                         </ul>
                     </li>
@@ -51,18 +49,14 @@
                             <li><a href="conference_pleniere.html">CONFÉRENCE PLÉNIÈRE</a></li>
                             <li><a href="Artiste.html">ARTISTE INVITÉ</a></li>
                             <li><a href="horaire.html">HORAIRE GÉNÉRAL</a></li>
-                            <li><a href="proposerUnAtelier.html">PROPOSER UN ATELIER</a></li>
+                            <li><a href="proposerUnAtelier.php">PROPOSER UN ATELIER</a></li>
                         </ul>
                     </li>
                     <li class="dropdown">
                         <a href="#" class="dropdown-toggle white" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">SE RENDRE AU CONGRÈS<span class="caret"></span></a>
                         <ul class="dropdown-menu">
-                            <li><a href="itineraire.html">ITINÉRAIRE</a></li>
-							<li><a href="covoiturage.html">COVOITURAGE</a></li>
+							<li><a href="transport.html">TRANSPORT</a></li>
 							<li><a href="stationnement.html">STATIONNEMENT</a></li>
-							<li><a href="hebergement.html">HÉBERGEMENT</a></li>
-                            <li role="separator" class="divider"></li>
-                            <li><a href="proche_cegep.html">LIEUX PROCHES DU CÉGEP</a></li>
                         </ul>
                     </li>
 				    
@@ -80,7 +74,6 @@
             </div><!-- /.navbar-collapse -->
         </div><!-- /.container-fluid -->
     </nav>
-
 
 	<div class="page-standard" id="Denis-p1">
         <h1>La conférence plénière</h1>
@@ -104,7 +97,7 @@
 				dont le titre rejoint le thème du congrès de l’AMQ de cette année : <i>Raisonnement mathématique et formation citoyenne</i>. 
 				<br />
 				<br />
-				Visitez le <a href="http://profmath.uqam.ca/~tanguay_d/">site</a> de Denis.
+				Visitez le <a href="http://profmath.uqam.ca/~tanguay_d/">site</a> de Denis Tanguay.
 			</p>            
         </div>
     </div>
