--- a/stationnement.html
+++ b/stationnement.html
@@ -40,8 +40,6 @@
                             <li><a href="nous_contacter.html">NOUS CONTACTER</a></li>
                             <li><a href="Comite.html">COMITÉ ORGANISATEUR</a></li>
                             <li role="separator" class="divider"></li>
-                            <li><a href="Apropos_AMQ.html">À PROPOS DE L'AMQ </a></li>
-                            <li role="separator" class="divider"></li>
                             <li><a href="commanditaires.html">COMMANDITAIRES</a></li>
                         </ul>
                     </li>
@@ -51,18 +49,14 @@
                             <li><a href="conference_pleniere.html">CONFÉRENCE PLÉNIÈRE</a></li>
                             <li><a href="Artiste.html">ARTISTE INVITÉ</a></li>
                             <li><a href="horaire.html">HORAIRE GÉNÉRAL</a></li>
-                            <li><a href="proposerUnAtelier.html">PROPOSER UN ATELIER</a></li>
+                            <li><a href="proposerUnAtelier.php">PROPOSER UN ATELIER</a></li>
                         </ul>
                     </li>
                     <li class="dropdown">
                         <a href="#" class="dropdown-toggle white" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">SE RENDRE AU CONGRÈS<span class="caret"></span></a>
                         <ul class="dropdown-menu">
-                            <li><a href="itineraire.html">ITINÉRAIRE</a></li>
-							<li><a href="covoiturage.html">COVOITURAGE</a></li>
+							<li><a href="transport.html">TRANSPORT</a></li>
 							<li><a href="stationnement.html">STATIONNEMENT</a></li>
-							<li><a href="hebergement.html">HÉBERGEMENT</a></li>
-                            <li role="separator" class="divider"></li>
-                            <li><a href="proche_cegep.html">LIEUX PROCHES DU CÉGEP</a></li>
                         </ul>
                     </li>
 				    
@@ -85,10 +79,9 @@
     <div class="page-standard" id="page-stationnement">
 		<h1>Stationnement</h1>
         <div class="col-md-12 col-s-12">
-            <p class="txtStationnement">
+            <h3>En vélo</h3>
+			<p class="txtStationnement">
             <img align="right" id="imgStationnement1" src="assets/stationsVelos.jpg" />		
-			<b>En vélo</b>
-			<br/>
 			Stationnement pour les vélos: La carte ci-contre indique les différentes aires de stationnement à vélo autour du cégep. 
 			Les aires accessibles par la rue Ontario sont celles les plus près de l’entrée principale : une est directement à côté de l’entrée 
 			principale et l’autre est près de l’entrée du bloc sportif. Par contre, si vous arrivez par le nord et que vous ne voulez pas monter la côte 
@@ -104,15 +97,15 @@
 			<br/>
 			<br/>
 			<br/>
+			</p>
 			
-			<b>En voiture</b>
-			<br/>
+			<h3>En voiture</h3>
+			<p class="txtStationnement">
 			Le stationnement du collège est situé un peu à l’ouest de l’entrée principale. Il est à noter que le stationnement n’est pas accessible 
 			avant 15h30 du lundi au vendredi, mais qu’il est ouvert en tout temps le soir et la fin de semaine.  
 			Le stationnement intérieur possède une borne de recharge électrique disponible pour le public. 
 			<br/>
 			Coût du stationnement : 12$ (par période de 12h)
-			
 			</p>
 		</div>
 
