--- a/transport.html
+++ b/transport.html
@@ -2,7 +2,7 @@
 <html lang="en" xmlns="http://www.w3.org/1999/xhtml">
 <head>
     <meta charset="utf-8" />
-    <title>Nous contacter | Congrès AMQ 2019</title>
+    <title>Transport | Congrès AMQ 2019</title>
     <!--favicon-->
     <link rel="shortcut icon" href="assets/favicon.ico" type="image/x-icon">
     <!-- Latest compiled and minified CSS -->
@@ -12,7 +12,7 @@
     <!--CSS General du site-->
     <link rel="stylesheet" href="styles/main.css" />
     <!--CSS de la page actuelle-->
-    <link rel="stylesheet" href="styles/Pages/Nous_contacter.css" />
+    <link rel="stylesheet" href="styles/Pages/Transport.css" />
 
     <script>document.write('<script src="http://' + (location.host || 'localhost').split(':')[0] + ':35729/livereload.js?snipver=1"></' + 'script>')</script>
 </head>
@@ -75,30 +75,82 @@
         </div><!-- /.container-fluid -->
     </nav>
 
-
-   <div class="page-standard" id="page-contact">
-        <h1>Nous contacter</h1>
-		<div class="col-md-12 col-s-12" >
-            <p id="txtContact">
+    <div class="page-standard" id="page-transport">
+        <h1>Comment se rendre</h1>
+		<h3 id="ancrageVelo">En vélo</h3>
+        <div class="col-md-12 col-s-12" >
+            <p class="txtTransport">
+			<b>Réseaux de pistes cyclables:</b><br/>
+			Dans les plans suivants, vous trouverez les pistes cyclables de Montréal ainsi que les différentes bornes BIXI. 
 			<br/>
-			<br/>
-			<b>Adresse postale</b> <br/>
-			Cégep du Vieux Montréal <br/>
-			255, rue Ontario Est <br/>
-			Montréal (Québec) <br/>
-			H2X 1X6 <br/>
-
+			Carte des pistes cyclables de Montréal : 
+			<br/><font color=blue>insérer carte_centre-ville.pdf</font><br/><br/>
+			Carte des pistes cyclables du Grand Montréal (si vous venez de plus loin!):
+			<br/> <font color=blue>insérer cartemontrealmetropolitain.pdf</font>
 			<br/><br/>
-			<b>Courriel</b>
+
+			<b>Venir en BIXI:</b>
 			<br/>
-			Courriel du comité organisateur :  info@amq2019.com <br/>
+			Bornes à proximité du cégep : <br/>
+			- Sanguinet/Ontario (station 6021), <font color=blue>XX</font> ancrages disponibles.<br/>
+			- de l’Hôtel-de-ville/Sherbrooke (station 6021), <font color=blue>XX</font> ancrages disponibles.<br/>
+			- Sanguinet/de Maisonneuve (station 6013), <font color=blue>XX</font> ancrages disponibles.<br/>
 			<br/><br/>
-			<b>Téléphone </b><br/>
-			Téléphone du cégep : 514 982-3437 <br/>
-			Poste pour rejoindre un organisateur du congrès : poste 2270 <br/>
+			Pour connaître l’emplacement des autres stations BIXI à Montréal, cliquer <a href="https://secure.bixi.com/map/">ici</a>!<br/>
+	  	    Pour savoir en temps réel le nombre de BIXI disponibles à chaque station, téléchargez l’application <a href="https://itunes.apple.com/ca/app/bixi/id628543321?mt=8">App Store</a> ou <a href="https://play.google.com/store/apps/details?id=com.eightd.biximobile&amp;hl=fr">Google Play</a>.
+
 			</p>
 		</div>
-	</div>
+
+		<h3>En transport en commun</h3>
+        <div class="col-md-12 col-s-12">
+            <p class="txtTransport">
+			<img align="right" id="imgPlanStationsMetro" src="assets/planStationsMetro.gif" />
+			Le cégep est situé entre trois stations de métro : Berri-Uqam, Saint-Laurent et Sherbrooke. 
+			<br/>À vous de choisir votre station préférée!
+			<br/><br/>
+			Plans du réseau de transport :<br/>
+			Plan du centre-ville :  <font color=blue>plan_reseau_centreville.pdf</font><br/>
+			Plan du réseau de Montréal : <font color=blue>plan_reseau.pdf</font><br/>
+			Plan du réseau de nuit (si vous veillez tard) : <font color=blue>plan_reseau_nuit.pdf et plan_centreville_nuit.pdf</font><br/>
+			Si vous venez de plus loin, pourquoi pas le train? : <font color=blue>reseautrain.pdf</font><br/>
+			<br/>
+			<img align="left" id="imgSTM" src="assets/stmMerci.jpg" />
+			<br/>
+			</p>
+		</div>
+
+		
+		<br/>
+		<h3>En voiture</h3>
+		<div class="col-md-4 col-s-12" id="nous-joindre">
+			<p class="txtTransport">
+				<iframe class="rond" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2795.7756214546134!2d-73.56855844883194!3d45.51459527899897!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4cc91a4b508adcab%3A0x9439f187f763ea27!2sC%C3%A9gep+du+Vieux+Montr%C3%A9al!5e0!3m2!1sen!2sca!4v1548698012269" width="200" height="200" frameborder="0" style="border:0" allowfullscreen></iframe>
+			</p>
+        </div>
+		
+		
+		
+		
+		
+		
+		
+		</div>
+		
+		
+		
+		
+		
+		
+		
+    </div>
+
+
+
+
+
+
+
 
 
     <div class="footer">
@@ -164,6 +216,11 @@
         <!-- Footer -->
 
     </div>
+
+
+
+
+
 
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
