--- a/horaire.html
+++ b/horaire.html
@@ -22,7 +22,7 @@
 </head>
 <body>
     <!--BARRE DE NAVIGATION-->
-    <nav class="navbar navbar-default navbar-fixed-top">
+     <nav class="navbar navbar-default navbar-fixed-top">
         <div class="container-fluid">
             <!-- Brand and toggle get grouped for better mobile display -->
             <div class="navbar-header">
@@ -45,8 +45,6 @@
                             <li><a href="nous_contacter.html">NOUS CONTACTER</a></li>
                             <li><a href="Comite.html">COMITÉ ORGANISATEUR</a></li>
                             <li role="separator" class="divider"></li>
-                            <li><a href="Apropos_AMQ.html">À PROPOS DE L'AMQ </a></li>
-                            <li role="separator" class="divider"></li>
                             <li><a href="commanditaires.html">COMMANDITAIRES</a></li>
                         </ul>
                     </li>
@@ -56,18 +54,14 @@
                             <li><a href="conference_pleniere.html">CONFÉRENCE PLÉNIÈRE</a></li>
                             <li><a href="Artiste.html">ARTISTE INVITÉ</a></li>
                             <li><a href="horaire.html">HORAIRE GÉNÉRAL</a></li>
-                            <li><a href="proposerUnAtelier.html">PROPOSER UN ATELIER</a></li>
+                            <li><a href="proposerUnAtelier.php">PROPOSER UN ATELIER</a></li>
                         </ul>
                     </li>
                     <li class="dropdown">
                         <a href="#" class="dropdown-toggle white" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">SE RENDRE AU CONGRÈS<span class="caret"></span></a>
                         <ul class="dropdown-menu">
-                            <li><a href="itineraire.html">ITINÉRAIRE</a></li>
-							<li><a href="covoiturage.html">COVOITURAGE</a></li>
+							<li><a href="transport.html">TRANSPORT</a></li>
 							<li><a href="stationnement.html">STATIONNEMENT</a></li>
-							<li><a href="hebergement.html">HÉBERGEMENT</a></li>
-                            <li role="separator" class="divider"></li>
-                            <li><a href="proche_cegep.html">LIEUX PROCHES DU CÉGEP</a></li>
                         </ul>
                     </li>
 				    
@@ -259,7 +253,7 @@
 				</tr>
 				<tr class="heure">
 					<td >21h</td>
-					<td class="social" rowspan="4"><a href="artiste.html">Réception artistique</a></td>
+					<td class="social" rowspan="4"><a href="Artiste.html">Réception artistique</a></td>
 					<td></td>
 					<td></td>
 				</tr>
