Merge, mise a jour du nav, optimisation de load.

--- a/test.html
+++ b/test.html
@@ -6,7 +6,7 @@
     <!--favicon-->
     <link rel="shortcut icon" href="assets/favicon.ico" type="image/x-icon">
     <!--CSS importants-->
-    <link rel="stylesheet" href="styles/Pages/Commanditaires.css" />
+    <link rel="stylesheet" href="styles/Pages/Inscription.css" />
     <link rel="stylesheet" href="css/bootstrap.css" />
     <link rel="stylesheet" href="styles/main.css" />
     <!--Couleur du theme aux versions mobiles-->
@@ -15,7 +15,6 @@
 </head>
 
 <body>
-
     <nav class="navbar navbar-default navbar-fixed-top">
         <div class="container-fluid">
             <!-- Brand and toggle get grouped for better mobile display -->
@@ -38,8 +37,8 @@
                         <ul class="dropdown-menu">
                             <li><a href="nous_contacter.html">NOUS CONTACTER</a></li>
                             <li><a href="Comite.html">COMITÉ ORGANISATEUR</a></li>
-                            <!--<li role="separator" class="divider"></li>
-                            <li><a href="Apropos_AMQ.html">À PROPOS DE L'AMQ </a></li>-->
+                            <li role="separator" class="divider"></li>
+                            <li><a href="Apropos_AMQ.html">À PROPOS DE L'AMQ </a></li>
                             <li role="separator" class="divider"></li>
                             <li><a href="commanditaires.html">COMMANDITAIRES</a></li>
                         </ul>
@@ -50,19 +49,18 @@
                             <li><a href="conference_pleniere.html">CONFÉRENCE PLÉNIÈRE</a></li>
                             <li white><a href="Artiste.html">ARTISTE INVITÉ</a></li>
                             <li><a href="horaire.html">HORAIRE GÉNÉRAL</a></li>
-                            <li><a href="proposerUnAtelier.php">PROPOSER UN ATELIER</a></li>
+                            <li><a href="proposerUnAtelier.html">PROPOSER UN ATELIER</a></li>
                         </ul>
                     </li>
                     <li class="dropdown">
                         <a href="#" class="dropdown-toggle white" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">SE RENDRE AU CONGRÈS<span class="caret"></span></a>
                         <ul class="dropdown-menu">
-                            <li><a href="transport.html">TRANSPORT</a></li>
-                            <!--<li><a href="itineraire.html">ITINÉRAIRE</a></li>
-                            <li><a href="covoiturage.html">COVOITURAGE</a></li>-->
+                            <li><a href="itineraire.html">ITINÉRAIRE</a></li>
+                            <li><a href="covoiturage.html">COVOITURAGE</a></li>
                             <li><a href="stationnement.html">STATIONNEMENT</a></li>
-                            <!--<li><a href="hebergement.html">HÉBERGEMENT</a></li>-->
-                            <!--<li role="separator" class="divider"></li>
-                            <li><a href="proche_cegep.html">LIEUX PROCHES DU CÉGEP</a></li>-->
+                            <li><a href="hebergement.html">HÉBERGEMENT</a></li>
+                            <li role="separator" class="divider"></li>
+                            <li><a href="proche_cegep.html">LIEUX PROCHES DU CÉGEP</a></li>
                         </ul>
                     </li>
 
@@ -82,39 +80,22 @@
     </nav>
 
 
-    <div class="page-standard row" id="page-commanditaires">
-        <h1 id="commanditaires">Nos commanditaires</h1>
-        <div class="col-md-12 col-s-12">
-            <p id="txtCommanditaires">
+    <div class="page-standard row" id="Inscription-p1">
+        <br /><br />
+        <br /><br />
+        <br /><br />
+        <!--<h1>S'inscrire</h1>
+        <p id="txtInscription">
 
-                <table>
-                    <tr>
-                        <th style="width:33%;"></th>
-                        <th style="width:33%;"></th>
-                        <th style="width:34%;"></th>
-                    </tr>
-                    <tr>
-                        <td>
-                            <a href="http://sciences.uqam.ca/fr/"><img class="img" id="imgSciencesUqam" src="assets/commanditaires/UQAM_faculte_sciences.jpg" /></a>
-                        </td>
-                        <td></td>
-                        <td>
-                            <a href="https://www.acfas.ca/"><img class="img" id="imgACFAS" src="assets/commanditaires/acfas.png" /></a>
-                        </td>
-                    </tr>
-                    <tr>
-                        <td>
-                            <a href="https://fcvm.ca"><img class="img" id="imgFondation" src="assets/commanditaires/fondation.png" /></a>
-                        </td>
-                        <td>
-                            <a href="http://ism.uqam.ca/"><img class="img" id="imgISM" src="assets/commanditaires/ISM.png" /></a>
-                        </td>
-                    </tr>
+            L’incription au congrès doit être effectuée sur le <a href="https://www.amq.math.ca/congres/inscription/">portail de l’AMQ</a>.
+            Les tarifs d’inscription sont réduits de <font color=blue>XX%</font> jusqu’au <font color=blue>XX</font> septembre.
+            <br />Notez que l’inscription au congrès est nécessaire même si on anime un atelier; vous aurez cependant droit à un rabais.
 
+        </p>-->
+        <a href="index.html">
+            <img src="assets/avenir.png" id="avenir" />
+        </a>
 
-                </table>
-            </p>
-        </div>
     </div>
 
     <footer class="page-footer">
@@ -207,3 +188,4 @@
 
 </body>
 </html>
+
